--- a/docs/modules/deployment/pages/containers/minion/minion.adoc
+++ b/docs/modules/deployment/pages/containers/minion/minion.adoc
@@ -48,7 +48,8 @@ endif::[]
 <2> Set the time zone and the Minion configuration via environment variables. To list all available time zones, use `timedatectl list-timezones`.
 <3> Optional. Use to control the minimal Java heap size.
 <4> Optional. Use to control the maximum Java heap size.
-<5> Configuration file for connectivity and features
+<5> Configuration file for connectivity and features.
+See the xref:reference:configuration/minion-confd/minion-confd.adoc[configuration reference] for more information.
 <6> Keystore file with encrypted credentials for authenticating broker endpoints.
 Initially this line should be commented out, and will need to be activated after the file has been created on the local system.
 <7> Run our health check to indicate the Minion is ready. It uses the `opennms:health-check` internally running in Karaf.
@@ -58,9 +59,9 @@ The Minion process in the container runs as a non-root user and can't open privi
 We open the listener for privileged (514/udp, 162/udp) and don't have to give additional permissions to the Minion process in the container.
 
 CAUTION: Some environments do not allow the use of ICMP (ping) for non-root users.
-         {page-component-title} Minion runs as a non-privileged user in the container with `userid=10001, groupid=10001`.
-         You can verify with `sysctl -n net.ipv4.ping_group_range` if the group id `10001` is in the allowed group range.
-         If not, add the following lines in your service definition in the `docker-compose.yml` file.
+{page-component-title} Minion runs as a non-privileged user in the container with `userid=10001, groupid=10001`.
+You can verify with `sysctl -n net.ipv4.ping_group_range` if the group id `10001` is in the allowed group range.
+If not, add the following lines in your service definition in the `docker-compose.yml` file.
 
 [source, docker-compose.yml]
 ----
@@ -87,12 +88,13 @@ netmgt:
 ----
 
 <1> Replace the broker endpoint URL that goes to your {page-component-title} Core instance. If you have ActiveMQ with SSL running, replace `tcp` with `ssl`.
-<2> Replace `my-location` with a location name that represents the remote location where the Minion is running.
-<3> Optional. You can set a unique human-readable Minion identifier; if not set, a unique identifier is generated.
-<4> Enable the Syslog listener on the Minion on port 1514/udp.
-<5> Enable the SNMP trap listener on the Minion on port 1162/udp.
+This can be omitted if you are using a Kafka message broker.
+<2> You can set a unique human-readable Minion identifier; if not set, a unique identifier is generated.
+<3> Replace `my-location` with a location name that represents the remote location where the Minion is running.
+<4> Optional. Enable the Syslog listener on the Minion on port 1514/udp.
+<5> Optional. Enable the SNMP trap listener on the Minion on port 1162/udp.
 
-TIP: To run with Apache Kafka or configure flow listeners, see the xref:reference:configuration/minion-confd/minion-confd.adoc#minion-confd[Minion configuration reference].
+TIP: To run with Apache Kafka or configure flow listeners, see the xref:reference:configuration/minion-confd/minion-confd.adoc[Minion configuration reference].
 
 Next, we need to create the keystore file and add the credentials for connecting to the core {page-component-title} server.
 
