--- a/docs/modules/deployment/pages/containers/minion/secure-karaf.adoc
+++ b/docs/modules/deployment/pages/containers/minion/secure-karaf.adoc
@@ -40,18 +40,19 @@ chown 10001:10001 users.properties
 chmod 600 users.properties
 ----
 
-.Inject the configuration files
-[source, docker-compose.yml]
+.Update `docker-compose.yml` to map the new config files
+[source, diff]
 ----
 volumes:
   - ./minion-config.yaml:/opt/minion/minion-config.yaml
-  - ./scv.jce:/opt/minion/scv.jce
-  - ./users.properties:/opt/minion/etc/users.properties
-  - ./org.apache.karaf.jaas.cfg:/opt/minion/etc/org.apache.karaf.jaas.cfg
+  - ./keystore/scv.jce:/opt/minion/etc/scv.jce
++ - ./users.properties:/opt/minion/etc/users.properties
++ - ./org.apache.karaf.jaas.cfg:/opt/minion/etc/org.apache.karaf.jaas.cfg
 ----
 
 .Restart the Minion container
 [source, console]
 ----
-docker-compose restart minion
+docker-compose create
+docker compose up -d
 ----
