--- a/docs/modules/operation/pages/deep-dive/notifications/concepts.adoc
+++ b/docs/modules/operation/pages/deep-dive/notifications/concepts.adoc
@@ -95,19 +95,32 @@ If the switch is `off`, notices will never be sent to the target.
 If the switch is `on`, notices will always be sent to the target.
 If the switch is set to `auto`, the system deploys heuristics aimed at "doing the right thing."
 
-== Variable bindings
+== Variable bindings filters
 
 Event parameters can additionally act as a filter method.
-This can be very helpful for events that don't have an association to a specific node, because the common filters only match against interfaces.
-A good example is a Business Service Monitor event.
-By defining the `vbname` and `vbvalue`, the notification will only be send with a positiv match.
+This can be helpful for events that don't have an association to a specific node and the common filters only match against interfaces.
+By defining the `vbname` and `vbvalue`, the notification will only be sent with if the event parameter matches the given value.
 
 Example:
 
+In this example, notifications on a SNMP Link Down event would be suppressed for trunk ports.
+
+.Example `notifications.xml` definition
 [source, xml]
 ----
-<varbind>
-    <vbname>businessServiceName</vbname>
-    <vbvalue>~^BSM-Service.*</vbvalue>
-</varbind>
+   <notification name="Link down notification" status="off">
+      <uei>uei.opennms.org/translator/traps/SNMP_Link_Down</uei>
+      <rule>(IPADDR IPLIKE *.*.*.*)</rule>
+      <destinationPath>Email-Admin</destinationPath>
+      <text-message>%descr%</text-message>
+      <subject>Notice #%noticeid% - Link Down</subject>
+      <numeric-message>111-%noticeid%</numeric-message>
+      <varbind>
+         <vbname>ifAlias</vbname> <1>
+         <vbvalue>~^.*Trunk.*</vbvalue> <2>
+      </varbind>
+   </notification>
 ----
+<1> Varbind or parameter name to filter
+<2> Value to match for the specified varbind/parameter.
+If the value starts with a `~`, it will be processed as a regular expression, otherwise it will be a string match.
