--- a/docs/modules/operation/nav.adoc
+++ b/docs/modules/operation/nav.adoc
@@ -238,6 +238,7 @@
 ***** xref:deep-dive/admin/configuration/https/https-server.adoc[]
 ***** xref:deep-dive/admin/configuration/https/request-logging.adoc[]
 ***** xref:deep-dive/admin/configuration/https/https-client.adoc[]
+**** xref:deep-dive/admin/configuration/newsfeed-configuration.adoc[]
 **** xref:deep-dive/admin/configuration/same-site-cookie.adoc[]
 **** xref:deep-dive/admin/configuration/scv-configuration.adoc[]
 **** xref:deep-dive/admin/configuration/system-properties.adoc[]
