NMS-16255: Updates per PR review.

--- a/docs/modules/development/pages/rest/newsfeed.adoc
+++ b/docs/modules/development/pages/rest/newsfeed.adoc
@@ -1,7 +1,8 @@
 
 = News Feed
 
-Gets processed news feed data from the OpenNMS RSS site. Used by the UI to display the News Feed panel.
+Gets processed news feed data from the OpenNMS RSS site.
+Used by the UI to display the News Feed panel.
 
 == GETs (reading data)
 
