NMS-16277: doc update

--- a/docs/modules/reference/pages/telemetryd/protocols/openconfig.adoc
+++ b/docs/modules/reference/pages/telemetryd/protocols/openconfig.adoc
@@ -137,7 +137,7 @@ Parameters are passed to the connector and are interpolated for node/interface a
 
 | hostname
 | The HostName OpenNMS needs to make a gRPC connection instead of using Node primary IpAddress.
-| 0
+| none
 
 | tls.enabled
 | Enable TLS authentication.
