--- a/docs/modules/operation/pages/deep-dive/notifications/configuration.adoc
+++ b/docs/modules/operation/pages/deep-dive/notifications/configuration.adoc
@@ -16,7 +16,7 @@ Because you get a notification that the router on the far end of the WAN link is
 
 See xref:operation:deep-dive/service-assurance/path-outages.adoc[Use Path Outages to Suppress Notifications] for additional information.
 
-You can configure a path outage for an individual node by setting a parent on the node in a requisition:
+You can configure a path outage for an individual node by setting a parent on the node in a requisition or by doing the following:
 
 . Click the *gear* symbol in the top-right of the screen.
 . Under Event Management, click menu:Configure Notifications[Configure Path Outages].
