--- a/docs/modules/reference/pages/configuration/minion-docker.adoc
+++ b/docs/modules/reference/pages/configuration/minion-docker.adoc
@@ -1,5 +1,5 @@
 [[minion-docker]]
-= Minion Docker
+= Minion Docker Configuration
 :description: Learn about startup arguments and environment variables for the Docker with the OpenNMS {page-component-title} Minion.
 
 == Startup arguments
