--- a/docs/modules/reference/pages/configuration/minion-confd/minion-confd.adoc
+++ b/docs/modules/reference/pages/configuration/minion-confd/minion-confd.adoc
@@ -3,7 +3,7 @@
 = Configuring Minion via confd
 :description: Learn how to configure the Minion via confd in OpenNMS {page-component-title}: mount, YAML file contents, Kafka sink, and so on.
 
-For information on testing confd templates, see xref:configuration/minion-confd/test-confd.adoc#confd-template-test[Test confd templates].
+For information on testing confd templates, see xref:reference:configuration/minion-confd/test-confd.adoc#confd-template-test[Test confd templates].
 
 == Mounting
 
