NMS-16351: Info rest docs

--- a/docs/modules/development/nav.adoc
+++ b/docs/modules/development/nav.adoc
@@ -39,6 +39,7 @@
 *** xref:rest/groups.adoc[]
 *** xref:rest/heatmap.adoc[]
 *** xref:rest/health_rest.adoc[]
+*** xref:rest/info.adoc[]
 *** xref:rest/ifservices.adoc[]
 *** xref:rest/ipinterfaces.adoc[]
 *** xref:rest/ksc_reports.adoc[]
