--- a/docs/modules/operation/pages/deep-dive/admin/configuration/usage-statistics.adoc
+++ b/docs/modules/operation/pages/deep-dive/admin/configuration/usage-statistics.adoc
@@ -97,5 +97,16 @@ To block the usage statistics feature from loading on future start ups, do the f
 In the core's `etc/featuresBoot.d` directory, create a file `disable_datachoices.boot` that contains the string `!datachoices` on a line by itself.
 
 
+[[disable-product-update-enrollment]]
+== Disable product update enrollment
 
+A related feature is Product Update Enrollment.
+On initial usage, a dialog will display allowing the user to enter some information in order to receive product update information from OpenNMS.
+The user can opt out by clicking "Opt Out".
+To disable the feature entirely, create a file in the `etc/opennms.properties.d` folder and add the following line.
+This will prevent the dialog from displaying and prevent any data being sent to OpenNMS.
 
+[source]
+----
+opennms.productUpdateEnrollment.show=false
+----
