add a note about UI automation

--- a/docs/modules/releasenotes/pages/whatsnew.adoc
+++ b/docs/modules/releasenotes/pages/whatsnew.adoc
@@ -42,3 +42,4 @@ This means that things will have moved around a bit in the filesystem, and that 
 * Our embedded Karaf container and Karaf APIs have been updated to 4.3.10
 * The OpenNMS Plugin API has been updated to 1.6.0
 * Zookeeper APIs have been updated to 3.7.x
+* If you are performing automated tests, you may need to disable the new popup that shows on first launch.  To do so set `opennms.userDataCollection.show=false` in a properties file in `$OPENNMS_HOME/etc/opennms.properties.d/`.
