--- a/docs/modules/operation/pages/deep-dive/kafka-producer/configure-kafka.adoc
+++ b/docs/modules/operation/pages/deep-dive/kafka-producer/configure-kafka.adoc
@@ -124,9 +124,9 @@ Consult the source code of the `org.opennms.netmgt.model.OnmsAlarm` class in you
 
 To enable metric forwarding, set the value of the `forward.metrics` property to `true`.
 
-WARNING: The producer's code sends a full CollectionSet per message to Kafka.
+The producer's code sends a full CollectionSet per message to Kafka.
 Large network equipment might have hundreds of thousands of metrics that could generate messages over the Kafka limit (1MB in size by default).
-You must increase `max.request.size` at the producer level and `message.max.bytes` and `replica.fetch.max.bytes` at the broker level to avoid problems with the consumers.
+If the messages are over 1MB in size, they will be broken up into smaller messages that are identified by the original timestamp.
 
 [source, console]
 ----
