--- a/docs/modules/operation/pages/deep-dive/kafka-producer/configure-kafka.adoc
+++ b/docs/modules/operation/pages/deep-dive/kafka-producer/configure-kafka.adoc
@@ -124,9 +124,10 @@ Consult the source code of the `org.opennms.netmgt.model.OnmsAlarm` class in you
 
 To enable metric forwarding, set the value of the `forward.metrics` property to `true`.
 
-The producer's code sends a full CollectionSet per message to Kafka.
+Kafka Producer sends a full CollectionSet as one message to Kafka.
 Large network equipment might have hundreds of thousands of metrics that could generate messages over the Kafka limit (1MB in size by default).
-If the messages are over 1MB in size, they will be broken up into smaller messages that are identified by the original timestamp.
+If the message size is over 1MB , they will broken up into smaller messages that are less than 1MB.
+When sending one CollectionSet over multiple messages, their timestamps will remain same.
 
 [source, console]
 ----
