--- a/opennms-assemblies/minion/src/main/filtered/debian/changelog
+++ b/opennms-assemblies/minion/src/main/filtered/debian/changelog
@@ -1,3 +1,12 @@
+opennms-minion (33.0.2-1) stable; urgency=medium
+
+  * Release 33.0.2 contains a bunch of bug fixes and enhancements.
+
+    For details on what has changed, see:
+    https://docs.opennms.com/horizon/33.0.2/index.html
+
+ -- OpenNMS Release Manager <opennms@opennms.org>  Tue, 12 Mar 2024 14:01:00 -0500
+
 opennms-minion (33.0.1-1) stable; urgency=medium
 
   * Release 33.0.1 is a re-release of 33.0.0, reverting the change to enable
